fixed paid amounts on inpatient claims

--- a/models/_models.yml
+++ b/models/_models.yml
@@ -2,133 +2,42 @@ version: 2
 
 models:
 
-### transformation
+### final
+  - name: eligibility
+    description: Member eligibility at the month grain
+
+  - name: medical_claim
+    description: Claim line details of all claim types
+
+  - name: pharmacy_claim
+    description: Claim line details of all claim types
+    
+
+### intermediate
   - name: carrier_claim
     description: Claim line details of carrier claims
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(claim_id || '-' || claim_line_number)"
 
   - name: dme_claim
     description: Claim line details of durable medical equipment claims
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(claim_id || '-' || claim_line_number)"
 
   - name: eligibility_unpivot
     description: >
       Transformation model to unpivot the Master Beneficiary Summary File 
       on DUAL_STUS_CD and MDCR_STATUS_CODE creating a row for each year/month 
       of eligibility.
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
 
   - name: home_health_claim
     description: Claim line details of home health claims
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(claim_id || '-' || claim_line_number)"
 
   - name: hospice_claim
     description: Claim line details of hospice claims
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(claim_id || '-' || claim_line_number)"
 
   - name: inpatient_claim
     description: Claim line details of inpatient claims
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(claim_id || '-' || claim_line_number)"
 
   - name: outpatient_claim
     description: Claim line details of outpatient claims
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(claim_id || '-' || claim_line_number)"
 
   - name: snf_claim
     description: Claim line details of skilled nursing facility claims
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(claim_id || '-' || claim_line_number)"
 
-### core
-  - name: eligibility
-    description: Member eligibility at the month grain
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(patient_id || '-' || payer || '-' || enrollment_start_date || '-' || enrollment_end_date)"
-
-  - name: medical_claim
-    description: Claim line details of all claim types
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
-    tests:
-      - unique:
-          column_name: "(claim_id || '-' || claim_line_number)"
-
-  - name: pharmacy_claim
-    description: Claim line details of all claim types
-    config:
-      database: "{{ var('medicare_lds_connector_database',var('tuva_database','tuva')) }}"
-      schema: |
-        {%- if var('medicare_lds_connector_schema',None) != None -%}{{ var('medicare_lds_connector_schema') }}
-        {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_medicare_lds
-        {% else %}medicare_lds{%- endif -%}
