--- a/models/_sources.yml
+++ b/models/_sources.yml
@@ -1,7 +1,7 @@
 version: 2
 
 sources:
-  - name: saf
+  - name: medicare_lds
     database: "{{ var('input_database') }}"
     schema:  "{{ var('input_schema') }}"
     tables:
