--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,45 +1,12 @@
-name: 'medicare_saf_connector'
-version: '1.0.0'
+name: 'medicare_lds_connector'
+version: '0.1.0'
 config-version: 2
 
+profile: default                    
 
-profile: 'default'                      
-
-## Variables affecting the configuration of this project and the Tuva Project
-## packages are below.
 vars:
-
-#########################################
-#### Medicare SAF Project Variables ####
-#########################################
-  input_database: medicare_lds
-  input_schema:  raw_data
-
-########################################
-#### Tuva Project Package Variables ####
-########################################
-
-# Target Database Variable:
-  tuva_database: medicare_lds
-
-
-  ## Source Table Names
-  carrier_base_claim: "{{ source('saf','carrier_base_claim') }}"
-  carrier_claim_line: "{{ source('saf','carrier_claim_line') }}"
-  dme_base_claim: "{{ source('saf','dme_base_claim') }}"
-  dme_claim_line: "{{ source('saf','dme_claim_line') }}"
-  hha_base_claim: "{{ source('saf','hha_base_claim') }}"
-  hha_revenue_center: "{{ source('saf','hha_revenue_center') }}"
-  hospice_base_claim: "{{ source('saf','hospice_base_claim') }}"
-  hospice_revenue_center: "{{ source('saf','hospice_revenue_center') }}"
-  inpatient_base_claim: "{{ source('saf','inpatient_base_claim') }}"
-  inpatient_revenue_center: "{{ source('saf','inpatient_revenue_center') }}"
-  master_beneficiary_summary: "{{ source('saf','master_beneficiary_summary') }}"
-  outpatient_base_claim: "{{ source('saf','outpatient_base_claim') }}"
-  outpatient_revenue_center: "{{ source('saf','outpatient_revenue_center') }}"
-  snf_base_claim: "{{ source('saf','snf_base_claim') }}"
-  snf_revenue_center: "{{ source('saf','snf_revenue_center') }}"
-
+  input_database: default
+  input_schema:  default
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
@@ -52,9 +19,3 @@ target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
-
-models:
-  medicare_saf_connector:
-    +materialized: view
-    core:
-      +materialized: table
