Update BigQuery secret name

--- a/.github/workflows/biweekly_dbt_v1.3.0_bigquery_build_full_refresh.yml
+++ b/.github/workflows/biweekly_dbt_v1.3.0_bigquery_build_full_refresh.yml
@@ -8,7 +8,7 @@ on:
   
 
 env:
-  DBT_BIGQUERY_TOKEN: ${{ secrets.DBT_BIGQUERY_TOKEN }}
+  DBT_BIGQUERY_TOKEN: ${{ secrets.TUVA_BIGQUERY_TOKEN }}
   DBT_BIGQUERY_CI_PROJECT: ${{ secrets.DBT_BIGQUERY_CI_PROJECT }}
 
   
