Add prefixes to models created by connector

--- a/models/_models.yml
+++ b/models/_models.yml
@@ -6,28 +6,33 @@ models:
   - name: eligibility
     description: Member eligibility at the month grain
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: medical_claim
     description: Claim line details of all claim types
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: pharmacy_claim
     description: Claim line details of all claim types
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
 ### intermediate
   - name: carrier_claim
     description: Claim line details of carrier claims
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: dme_claim
     description: Claim line details of durable medical equipment claims
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: eligibility_unpivot
     description: >
@@ -35,29 +40,35 @@ models:
       on DUAL_STUS_CD and MDCR_STATUS_CODE creating a row for each year/month 
       of eligibility.
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: home_health_claim
     description: Claim line details of home health claims
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: hospice_claim
     description: Claim line details of hospice claims
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: inpatient_claim
     description: Claim line details of inpatient claims
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: outpatient_claim
     description: Claim line details of outpatient claims
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
 
   - name: snf_claim
     description: Claim line details of skilled nursing facility claims
     config:
-      schema: _tuva_claims
+      schema: |
+        {%- if var('tuva_schema_prefix',None) != None -%}_{{var('tuva_schema_prefix')}}_tuva_claims{% else %}_tuva_claims{%- endif -%}
